[Bug 956958] Use new question filtering on mobile.

--- a/kitsune/sumo/static/less/mobile/main.less
+++ b/kitsune/sumo/static/less/mobile/main.less
@@ -583,7 +583,7 @@ input[type="submit"]:visited {
     > section {
       border-bottom: 1px solid #2f393b;
       border-top: 1px solid #484d54;
-      padding: 10px 16px;
+      padding: 6px 16px;
 
       &:first-of-type {
         border-top: 0;
